He començat el pas 1, però dona error

--- a/crear_blueprint.ipynb
+++ b/crear_blueprint.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "id": "8cb13114",
    "metadata": {},
    "outputs": [
@@ -48,6 +48,7 @@
       " - energy_pipeline_summary.npy\n",
       " - environment.yml\n",
       " - synthetic_paper.npy\n",
+      " - synthetic_paper_0.npy\n",
       " - synthetic_repo_errors.npy\n"
      ]
     }
@@ -63,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "id": "47175c83",
    "metadata": {},
    "outputs": [],
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "id": "2109afac",
    "metadata": {},
    "outputs": [
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "id": "9be74200",
    "metadata": {},
    "outputs": [],
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "id": "6a76e455",
    "metadata": {},
    "outputs": [
@@ -271,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "id": "7d1b9b12",
    "metadata": {},
    "outputs": [
@@ -314,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "id": "0a5c5fcf",
    "metadata": {},
    "outputs": [
@@ -367,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "id": "89bab6f6",
    "metadata": {},
    "outputs": [
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "id": "4b7136c4",
    "metadata": {},
    "outputs": [
@@ -440,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "id": "304c50fc",
    "metadata": {},
    "outputs": [
@@ -484,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "id": "0f0ea094",
    "metadata": {},
    "outputs": [
@@ -533,25 +534,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "id": "0fddc963",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Blueprint A2 carregat: shape (224, 224) edges: 2186\n",
-      "Edges A2: 2186 Zeros A2: 47990\n",
-      "Xarxa 0: Edges = 2186, Errors esborrant = 327, Errors creant = 327\n",
-      "Xarxa 1: Edges = 2186, Errors esborrant = 327, Errors creant = 327\n",
-      "\n",
-      "Guardades les xarxes amb errors exactes a: synthetic_repo_errors.npy\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'# === Generar xarxes amb errors exactes (estil del repo) ===\\n\\nK = 2             # nombre de xarxes a generar\\ne_error = 327       # errors esborrant enllaços\\nz_error = 327       # errors creant enllaços\\n\\n# Carregar blueprint si cal\\nif \\'L\\' not in globals():\\n    print(\"No hi ha L a la memòria, carregant A2_blueprint.npy ...\")\\n    L = np.load(\"A2_blueprint.npy\")\\n\\nNx = L.shape[0]\\nprint(\"Blueprint A2 carregat: shape\", L.shape, \"edges:\", int(L.sum()))\\n\\n# Preparar output\\nA_repo = np.zeros((K, Nx, Nx), dtype=int)\\nrng = np.random.default_rng(42)  # llavor fixa\\n\\nedges_total = int(L.sum())\\nzeros_total = Nx * Nx - edges_total\\n\\nprint(\"Edges A2:\", edges_total, \"Zeros A2:\", zeros_total)\\n\\n# Comprovacions\\nif e_error > edges_total:\\n    raise ValueError(f\"e_error ({e_error}) > nombre d\\'enllaços ({edges_total})\")\\nif z_error > zeros_total:\\n    raise ValueError(f\"z_error ({z_error}) > nombre de zeros ({zeros_total})\")\\n\\nfor m in range(K):\\n    A = L.copy().astype(int)\\n    A_flat = A.reshape(Nx*Nx)\\n\\n    ones_idx = np.where(A_flat == 1)[0]\\n    zeros_idx = np.where(A_flat == 0)[0]\\n\\n    flip_ones = rng.choice(ones_idx, size=e_error, replace=False)\\n    flip_zeros = rng.choice(zeros_idx, size=z_error, replace=False)\\n\\n    A_flat[flip_ones] = 0\\n    A_flat[flip_zeros] = 1\\n\\n    A = A_flat.reshape(Nx, Nx)\\n    A_repo[m] = A\\n\\n    errors_removed = edges_total - np.sum((A == 1) & (L == 1))\\n    errors_added = np.sum((A == 1) & (L == 0))\\n\\n    print(f\"Xarxa {m}: Edges = {int(A.sum())}, Errors esborrant = {errors_removed}, Errors creant = {errors_added}\")\\n\\n# Guardar a disc\\nout_name = \"synthetic_repo_errors.npy\"\\nnp.save(out_name, A_repo)\\nprint(\"\\nGuardades les xarxes amb errors exactes a:\", out_name)\\n'"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# === Generar xarxes amb errors exactes (estil del repo) ===\n",
+    "'''# === Generar xarxes amb errors exactes (estil del repo) ===\n",
     "\n",
     "K = 2             # nombre de xarxes a generar\n",
     "e_error = 327       # errors esborrant enllaços\n",
@@ -604,7 +603,8 @@
     "# Guardar a disc\n",
     "out_name = \"synthetic_repo_errors.npy\"\n",
     "np.save(out_name, A_repo)\n",
-    "print(\"\\nGuardades les xarxes amb errors exactes a:\", out_name)\n"
+    "print(\"\\nGuardades les xarxes amb errors exactes a:\", out_name)\n",
+    "'''"
    ]
   },
   {
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 64,
    "id": "f9447b3c",
    "metadata": {},
    "outputs": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 65,
    "id": "49a162bf",
    "metadata": {},
    "outputs": [
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "id": "3b0c980c",
    "metadata": {},
    "outputs": [
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 67,
    "id": "a3e81b1f",
    "metadata": {},
    "outputs": [],
@@ -825,24 +825,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "017ad3a2",
+   "execution_count": 68,
+   "id": "b6cfd7ee",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# @jit(nopython = True)\n",
+    "@jit(nopython = True)\n",
     "def hamiltonian_prob(Edges_NoL, Edges_L, overlap_0, overlap_1, alpha, beta):\n",
-    "#calcula l’energia H com a suma de dues log-Beta (usant lgamma) i torna - (H1 + H0) \n",
-    "    \n",
-    "    print(\"\\n---- DINS HAMILTONIAN ----\")\n",
-    "    print(\"Edges_NoL:\", Edges_NoL)\n",
-    "    print(\"Edges_L:\", Edges_L)\n",
-    "    print(\"overlap_0:\", overlap_0)\n",
-    "    print(\"overlap_1:\", overlap_1)\n",
-    "    print(\"alpha:\", alpha, \"beta:\", beta)\n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "\n",
     "    A_1 = overlap_1 + alpha\n",
     "    B_1 = (Edges_L - overlap_1 + beta)\n",
     "    C_1 = Edges_L + alpha + beta\n",
@@ -856,60 +846,37 @@
     "    H0 = math.lgamma(A_0)+ math.lgamma(B_0) - math.lgamma(C_0) \n",
     "    \n",
     "    H = -(H1 + H0)\n",
-    "    print(\"A_1,B_1,C_1 =\", A_1, B_1, C_1)\n",
-    "    print(\"A_0,B_0,C_0 =\", A_0, B_0, C_0)\n",
     "    return H\n",
-    "\n",
     "    \n",
     "    \n",
-    "# @jit(nopython=True)\n",
+    "@jit(nopython=True)\n",
     "def overlap_total_prob(L_f, A_f, P_inv_f):\n",
-    "    #corre la blueprint L_f (de mida Ny x Nx) i per cada observació k suma 2 quantitats:\n",
-    "\n",
-    "    print(\"\\n=== DINS overlap_total_prob ===\")\n",
-    "    print(\"L_f shape:\", L_f.shape)\n",
-    "    print(\"A_f shape:\", A_f.shape)\n",
-    "    print(\"P_inv_f shape:\", P_inv_f.shape)\n",
-    "\n",
     "    Nx = L_f.shape[0]\n",
     "    Ny = L_f.shape[1]\n",
     "    K = A_f.shape[0]\n",
     "    \n",
-    "    ovlp_0 = np.zeros((K)) #nombre de posicions on L==0 i A_k també és 0.\n",
-    "    ovlp_1 = np.zeros((K)) #nombre de posicions on L==1 i A_k (mapejat per P_inv) també és 1.\n",
+    "    ovlp_0 = np.zeros((K))\n",
+    "    ovlp_1 = np.zeros((K))\n",
     "    for k in range(0,K):\n",
-    "        print(f\"\\n-- Xarxa k = {k} --\")\n",
     "        for f in range(0,Ny): \n",
     "            for c in range(0,Nx):\n",
     "                p_f=int(P_inv_f[k,f])\n",
     "                p_c=int(P_inv_f[k,c])  \n",
     "                \n",
-    "                if f < 3 and c < 3:    # evitar imprimir massa\n",
-    "                    print(f\"f={f}, c={c}  ->  mapped to (p_f={p_f}, p_c={p_c})\")\n",
-    "\n",
-    "\n",
     "                valor_L, valor_A = L_f[f,c], A_f[k,p_f,p_c]\n",
-    "\n",
-    "                if f < 3 and c < 3:\n",
-    "                    print(f\"L={valor_L}, A={valor_A}\")\n",
     "                \n",
     "                ovlp_0[k] = ovlp_0[k] + (1-valor_L)*(1-valor_A )\n",
     "                ovlp_1[k] = ovlp_1[k] + valor_L*valor_A\n",
     "                \n",
-    "    print(\"SUMA FINAL ovlp_0:\", sum(ovlp_0))\n",
-    "    print(\"SUMA FINAL ovlp_1:\", sum(ovlp_1))\n",
-    "\n",
-    "    ovlp_1 = int(sum(ovlp_1)) #potser els que ens interesa és el de cada xarxa, no la suma\n",
+    "                \n",
+    "    ovlp_1 = int(sum(ovlp_1))\n",
     "    ovlp_0 = int(sum(ovlp_0))\n",
     "    return ovlp_0, ovlp_1\n",
     "\n",
     "\n",
-    "#@jit(nopython=True) # The blueprint is the average of the observations (taking into account the mapping)  \n",
+    "@jit(nopython=True) # The blueprint is the average of the observations (taking into account the mapping)  \n",
     "def L_wiring(A_f, P_inv_f):\n",
-    "    #reconstrueix una blueprint entrenada L_new_f, prenent per cada observació la majoria mitjana\n",
-    "    print(\"\\n=== DINS L_wiring ===\")\n",
-    "    print(\"A_f shape:\", A_f.shape)\n",
-    "    print(\"P_inv_f shape:\", P_inv_f.shape)\n",
+    "    \n",
     "    Nx = A_f.shape[1]\n",
     "    Ny = A_f.shape[2]\n",
     "    K = A_f.shape[0]\n",
@@ -925,15 +892,12 @@
     "            valor_lnew=1/K* L_new_f[i,j]\n",
     "            L_new_f[i,j] = round( valor_lnew ) \n",
     "            # If valor_lnew = 0, L=0 (we could establish L=1, but it is more probable to not have a connection)\n",
-    "            if i < 3 and j < 3:\n",
-    "                print(f\"[{i},{j}] sum = {L_new_f[i,j]}\")\n",
+    "    \n",
     "    return L_new_f\n",
     "\n",
     "\n",
     "#### Some algorithm for sorting\n",
-    "#partition i quicksort són la implementació in-place del quicksort per ordenar nodes segons grau.\n",
-    "#També s’ordenen les etiquetes (array etiquetas) per mantenir el mapping.\n",
-    "#@jit(nopython=True)\n",
+    "@jit(nopython=True)\n",
     "def partition(array,  etiquetas, begin, end):\n",
     "    pivot = begin\n",
     "    for i in range(begin+1, end+1):\n",
@@ -945,7 +909,7 @@
     "    etiquetas[pivot], etiquetas[begin] = etiquetas[begin], etiquetas[pivot] \n",
     "\n",
     "    return pivot\n",
-    "#@jit(nopython=True)\n",
+    "@jit(nopython=True)\n",
     "def quicksort(array, etiquetas, begin=0, end=None):\n",
     "    if end is None:\n",
     "        end = len(array) - 1\n",
@@ -957,17 +921,9 @@
     "    quicksort(array, etiquetas, begin, pivot-1)\n",
     "    quicksort(array,  etiquetas, pivot+1, end)\n",
     "    \n",
-    "#@njit \n",
+    "@njit \n",
     "# We inizialise the algorithm sorting by node degree, but also taking into account the group labels\n",
     "def permu_groups(L_f, A_f, start_f): \n",
-    "    #calcula el grau (nombre de connexions) per cada node a L_f i a cada A_f[k].\n",
-    "    #ordena nodes per grau i després reordena segons start_f (grups), i construeix P_f (mapping L->A) i P_inv_f (A->L).\n",
-    "    print(\"\\n=== DINS permu_groups ===\")\n",
-    "    print(\"L_f shape:\", L_f.shape)\n",
-    "    print(\"A_f shape:\", A_f.shape)\n",
-    "\n",
-    "    print(\"start_f:\", start_f)\n",
-    "\n",
     "    Nx = L_f.shape[0]\n",
     "    Ny = L_f.shape[1]\n",
     "    K = A_f.shape[0]\n",
@@ -985,8 +941,6 @@
     "    for i in range(Nx):\n",
     "        b=np.nonzero(L_f[i,:])\n",
     "        orden_L[i] = b[0].size\n",
-    "\n",
-    "    print(\"Graus L_f (primeres 10):\", orden_L[:10])\n",
     "        \n",
     "    array_L = np.arange(Nx) #For the labels \n",
     "    quicksort(orden_L, array_L)\n",
@@ -1046,6 +1000,137 @@
     "    return P_todo\n",
     "\n",
     " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f937217f",
+   "metadata": {},
+   "source": [
+    "## Generar 10 mostres"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc543336",
+   "metadata": {},
+   "source": [
+    "El que vull fer ara és agafar la blueprint i les dues xarxes generades i aplicar la identitat i les funcions d'energia. Després, fer un shuffle i aplicar energies. Generar 10 i fer historigrama"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea9674ba",
+   "metadata": {},
+   "source": [
+    "### pas 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb9f0af9",
+   "metadata": {},
+   "source": [
+    "De moment agafo la latent, i les dues xarxes generades amb cert error i aplico identitat i funcions d'energia"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "7adc8e1e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Primeres 6 posicions de la primera fila del vector identitat, han de sortir en ordre [0 1 2 3 4 5]\n",
+      "Aplico L_wiring\n",
+      "L_nova shape: (224, 224)\n",
+      "Similitud entre L y L_nova: 49559 de 50176\n",
+      "Aplico overlap_total_prob\n",
+      "ovlp0_identity = 95318\n",
+      "ovlp1_identity = 3719\n",
+      "Edges_L  = 2186\n",
+      "Edges_NoL = 47990\n",
+      "alpha = 1.0  beta = 1.0\n",
+      "Aplico hamiltonian_prob\n",
+      "H_identity = -inf\n",
+      "PAS 1 complet correctament.\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#carrego fitxers\n",
+    "L = np.load(\"A2_blueprint.npy\")                   # blueprint guardada\n",
+    "A_test = np.load(\"synthetic_paper.npy\")           # 2 xarxes generades\n",
+    "\n",
+    "\n",
+    "# Construir Ao_stack i identitat (P_inv_id)\n",
+    "Ao_enters = A_test.astype(int)       # aqui convertim a int per si de cas havia quedat amb floats després de fer rand\n",
+    "P_inv_id = np.tile(np.arange(Nx), (K,1)).astype(int)   #fem k vectors identitat, perquè les funcions defineixen les permutacions com vectors de mmida NX, no matrius\n",
+    "\n",
+    "print(\"Primeres 6 posicions de la primera fila del vector identitat, han de sortir en ordre\", P_inv_id[0,:6])\n",
+    "\n",
+    "#ara tinc:\n",
+    "#L → la blueprint (matriu binaria 224x224)\n",
+    "#A_test → les dues xarxes q he generat abans amb p i q(forma 2×224×224)\n",
+    "#P_inv_id → perm identitat (0,1,2,…,223), feta dos cops (per les dues xarxes)'''\n",
+    "\n",
+    "#Cridar L_wiring sobre Ao_stack amb identitat, aixo em dona tot 0s, aixiq  ha d'estar malament\n",
+    "print(\"Aplico L_wiring\")\n",
+    "L_nova = L_wiring(Ao_enters, P_inv_id)\n",
+    "print(\"L_nova shape:\", L_nova.shape)\n",
+    "\n",
+    "#comprovar si L_nova és igual a L\n",
+    "print(\"Similitud entre L y L_nova:\", np.sum(L == L_nova), \"de\", Nx*Nx)\n",
+    "#si no surt 50176 de 50176, vol dir que L_wiring no està funcionant bé.\n",
+    "\n",
+    "\n",
+    "#Cridar overlap_total_prob amb la blueprint original (L) i Ao_stack amb identitat\n",
+    "print(\"Aplico overlap_total_prob\")\n",
+    "ovlp0_identity, ovlp1_identity = overlap_total_prob(L, Ao_enters, P_inv_id)\n",
+    "print(\"ovlp0_identity =\", ovlp0_identity)\n",
+    "print(\"ovlp1_identity =\", ovlp1_identity) \n",
+    "\n",
+    "#un valor raonable seria tenir ovlp1_identity proper al nombre d'enllaços menys els errors esborrant, i ovlp0_identity proper al nombre de zeros menys els errors creant.\n",
+    "#com la majoria eres zeros, ovlp0_identity ha de ser molt gran, i ovlp1_identity ha de ser menor però proper al nombre d'enllaços menys els errors esborrant(menor que 2186).\n",
+    "#dona valors inconsistents, per tant alguna cosa no està funcionant bé.\n",
+    "\n",
+    "#aplico hamiltonian_prob\n",
+    "# Calcular nombre d'enllaços i zeros a la blueprint\n",
+    "Nx = L.shape[0]\n",
+    "Edges_L = int(L.sum())                 # nombre de 1s de la blueprint, hauria de ser 2186\n",
+    "Edges_NoL = Nx*Nx - Edges_L            # nombre de 0s\n",
+    "\n",
+    "print(\"Edges_L  =\", Edges_L)\n",
+    "print(\"Edges_NoL =\", Edges_NoL)\n",
+    "\n",
+    "#Parametres alpha i beta\n",
+    "alpha = 1.0\n",
+    "beta  = 1.0\n",
+    "print(\"alpha =\", alpha, \" beta =\", beta)\n",
+    "\n",
+    "# Aplicar hamiltonian_prob\n",
+    "print(\"Aplico hamiltonian_prob\")\n",
+    "H_identity = hamiltonian_prob(\n",
+    "    Edges_NoL,\n",
+    "    Edges_L,\n",
+    "    ovlp0_identity,\n",
+    "    ovlp1_identity,\n",
+    "    alpha,\n",
+    "    beta\n",
+    ")\n",
+    "\n",
+    "print(\"H_identity =\", H_identity)\n",
+    "\n",
+    "#Guardar resultats, descomento quan estig segura que funciona\n",
+    "#np.save(\"H_identity.npy\", np.array(H_identity))\n",
+    "#np.save(\"ovlp0_identity.npy\", np.array(ovlp0_identity))\n",
+    "#np.save(\"ovlp1_identity.npy\", np.array(ovlp1_identity))\n",
+    "\n",
+    "print(\"PAS 1 complet correctament.\")\n"
    ]
   }
  ],
