--- a/crear_blueprint.ipynb
+++ b/crear_blueprint.ipynb
@@ -634,11 +634,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "f9447b3c",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#defineixo funcio CreateCopies\n",
     "def CreateCopies(L,q,p,num_networks=2):\n",
     "    Nx = len(L) #nombre de nodes \n",
     "    A_test = np.zeros((num_networks, Nx, Nx)) #crea un array 3D ple de zeros\n",
@@ -672,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "7d986762",
    "metadata": {},
    "outputs": [
@@ -724,7 +725,7 @@
     }
    ],
    "source": [
-    "np.random.seed(11) #fixo la llavor de les xarxes random generades pq sino cada execucio em genera xarxes diferents\n",
+    "np.random.seed(11) #hem tret la llavor fixa per tenir variabilitat\n",
     "for nrep in range(10):\n",
     "    A_test = CreateCopies(L, q_paper, p_paper, num_networks=2)\n",
     "    print('rep',nrep,'xarxa 1',np.sum(np.sum(A_test[0]-L)))\n",
@@ -741,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "49a162bf",
    "metadata": {},
    "outputs": [
@@ -755,7 +756,7 @@
     }
    ],
    "source": [
-    "\n",
+    "#aixo fa el mateix que la funcio CreateCopies, pero sense funcio, treure\n",
     "A_test_0 = np.zeros((num_networks, Nx, Nx))\n",
     "np.random.seed(1)\n",
     "\n",
