He arreglado lo q me hizo marta para generar redes, ahora funciona para el caso identidad, toca hacer shuffle

--- a/codienbrut.ipynb
+++ b/codienbrut.ipynb
@@ -1419,6 +1419,88 @@
     "print(\"samples0 shape:\", samples0.shape)\n",
     "print(\"samples1 shape:\", samples1.shape)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a205f17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(111) #fixo la llavor de les xarxes random generades pq sino cada execucio em genera xarxes diferents\n",
+    "q_paper, p_paper = 0, 0 #0.15, 0.007\n",
+    "#carrego fitxers\n",
+    "L = np.load(\"A2_blueprint.npy\")                   # blueprint guardada\n",
+    "num_networks = 2\n",
+    "Nx = L.shape[0]\n",
+    "A_test = CreateCopies(L,q_paper,p_paper, num_networks=num_networks)         # 2 xarxes generades\n",
+    "\n",
+    "# Construir Ao a enters i identitat (P_inv_id)\n",
+    "Ao_enters = A_test.astype(int)       # aqui convertim a int per si de cas havia quedat amb floats després de fer rand\n",
+    "P_inv_id = np.tile(np.arange(Nx), (num_networks, 1))\n",
+    "P_inv_shuffle[k] = np.random.permutation(Nx)\n",
+    "\n",
+    "#P_inv_id = np.array([random.shuffle(np.arange(Nx)) for _ in range(num_networks)])\n",
+    "#np.tile(np.arange(Nx), (K,1)).astype(int)   #fem k vectors identitat, perquè les funcions defineixen les permutacions com vectors de mmida NX, no matrius\n",
+    "#print(P_inv_id)\n",
+    "#print(\"Primeres 6 posicions de la primera fila del vector identitat, han de sortir en ordre\", P_inv_id[0,:6])\n",
+    "\n",
+    "#ara tinc:\n",
+    "#L → la blueprint (matriu binaria 224x224)\n",
+    "#A_test → les dues xarxes q he generat abans amb p i q(forma 2×224×224)\n",
+    "#P_inv_id → perm identitat (0,1,2,…,223), feta dos cops (per les dues xarxes)'''\n",
+    "\n",
+    "#Cridar L_wiring \n",
+    "print(\"Aplico L_wiring\")\n",
+    "L_nova = L_wiring(Ao_enters, P_inv_id)\n",
+    "print(\"L_nova num 1s :\", np.sum(np.sum(L_nova)),np.sum(np.sum(L)))\n",
+    "\n",
+    "\n",
+    "\n",
+    "#Cridar overlap_total_prob amb la blueprint original (L) i Ao_stack amb identitat\n",
+    "print(\"Aplico overlap_total_prob\")\n",
+    "ovlp0_identity, ovlp1_identity = overlap_total_prob(L_nova, Ao_enters, P_inv_id)\n",
+    "print(\"ovlp0_identity =\", ovlp0_identity)\n",
+    "print(\"ovlp1_identity =\", ovlp1_identity) \n",
+    "\n",
+    "#un valor raonable seria tenir ovlp1_identity proper al nombre d'enllaços menys els errors esborrant, i ovlp0_identity proper al nombre de zeros menys els errors creant.\n",
+    "#com la majoria eres zeros, ovlp0_identity ha de ser molt gran, i ovlp1_identity ha de ser menor però proper al nombre d'enllaços menys els errors esborrant(menor que 2186).\n",
+    "#dona valors inconsistents, per tant alguna cosa no està funcionant bé.\n",
+    "\n",
+    "#aplico hamiltonian_prob\n",
+    "# Calcular nombre d'enllaços i zeros a la blueprint\n",
+    "Nx = L_nova.shape[0]\n",
+    "Edges_L = num_networks* int(L_nova.sum())                 # nombre de 1s de la blueprint, hauria de ser 2186\n",
+    "Edges_NoL = num_networks*Nx*Nx - Edges_L            # nombre de 0s\n",
+    "\n",
+    "print(\"Edges_L  =\", Edges_L)\n",
+    "print(\"Edges_NoL =\", Edges_NoL)\n",
+    "\n",
+    "#Parametres alpha i beta\n",
+    "alpha = 1.0\n",
+    "beta  = 1.0\n",
+    "print(\"alpha =\", alpha, \" beta =\", beta)\n",
+    "\n",
+    "# Aplicar hamiltonian_prob\n",
+    "print(\"Aplico hamiltonian_prob\")\n",
+    "H_identity = hamiltonian_prob(\n",
+    "    Edges_NoL,\n",
+    "    Edges_L,\n",
+    "    ovlp0_identity,\n",
+    "    ovlp1_identity,\n",
+    "    alpha,\n",
+    "    beta\n",
+    ")\n",
+    "\n",
+    "print(\"H_identity =\", H_identity)\n",
+    "\n",
+    "#Guardar resultats, descomento quan estig segura que funciona\n",
+    "#np.save(\"H_identity.npy\", np.array(H_identity))\n",
+    "#np.save(\"ovlp0_identity.npy\", np.array(ovlp0_identity))\n",
+    "#np.save(\"ovlp1_identity.npy\", np.array(ovlp1_identity))\n",
+    "\n",
+    "print(\"PAS 1 complet correctament.\")\n"
+   ]
   }
  ],
  "metadata": {
