--- a/crear_blueprint.ipynb
+++ b/crear_blueprint.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 94,
    "id": "8cb13114",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 95,
    "id": "47175c83",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 96,
    "id": "2109afac",
    "metadata": {},
    "outputs": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 97,
    "id": "9be74200",
    "metadata": {},
    "outputs": [],
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 98,
    "id": "6a76e455",
    "metadata": {},
    "outputs": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 99,
    "id": "7d1b9b12",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 100,
    "id": "0a5c5fcf",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 101,
    "id": "89bab6f6",
    "metadata": {},
    "outputs": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 102,
    "id": "4b7136c4",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 103,
    "id": "304c50fc",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 104,
    "id": "0f0ea094",
    "metadata": {},
    "outputs": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 105,
    "id": "0fddc963",
    "metadata": {},
    "outputs": [
@@ -544,7 +544,7 @@
        "'# === Generar xarxes amb errors exactes (estil del repo) ===\\n\\nK = 2             # nombre de xarxes a generar\\ne_error = 327       # errors esborrant enllaços\\nz_error = 327       # errors creant enllaços\\n\\n# Carregar blueprint si cal\\nif \\'L\\' not in globals():\\n    print(\"No hi ha L a la memòria, carregant A2_blueprint.npy ...\")\\n    L = np.load(\"A2_blueprint.npy\")\\n\\nNx = L.shape[0]\\nprint(\"Blueprint A2 carregat: shape\", L.shape, \"edges:\", int(L.sum()))\\n\\n# Preparar output\\nA_repo = np.zeros((K, Nx, Nx), dtype=int)\\nrng = np.random.default_rng(42)  # llavor fixa\\n\\nedges_total = int(L.sum())\\nzeros_total = Nx * Nx - edges_total\\n\\nprint(\"Edges A2:\", edges_total, \"Zeros A2:\", zeros_total)\\n\\n# Comprovacions\\nif e_error > edges_total:\\n    raise ValueError(f\"e_error ({e_error}) > nombre d\\'enllaços ({edges_total})\")\\nif z_error > zeros_total:\\n    raise ValueError(f\"z_error ({z_error}) > nombre de zeros ({zeros_total})\")\\n\\nfor m in range(K):\\n    A = L.copy().astype(int)\\n    A_flat = A.reshape(Nx*Nx)\\n\\n    ones_idx = np.where(A_flat == 1)[0]\\n    zeros_idx = np.where(A_flat == 0)[0]\\n\\n    flip_ones = rng.choice(ones_idx, size=e_error, replace=False)\\n    flip_zeros = rng.choice(zeros_idx, size=z_error, replace=False)\\n\\n    A_flat[flip_ones] = 0\\n    A_flat[flip_zeros] = 1\\n\\n    A = A_flat.reshape(Nx, Nx)\\n    A_repo[m] = A\\n\\n    errors_removed = edges_total - np.sum((A == 1) & (L == 1))\\n    errors_added = np.sum((A == 1) & (L == 0))\\n\\n    print(f\"Xarxa {m}: Edges = {int(A.sum())}, Errors esborrant = {errors_removed}, Errors creant = {errors_added}\")\\n\\n# Guardar a disc\\nout_name = \"synthetic_repo_errors.npy\"\\nnp.save(out_name, A_repo)\\nprint(\"\\nGuardades les xarxes amb errors exactes a:\", out_name)\\n'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 106,
    "id": "f9447b3c",
    "metadata": {},
    "outputs": [],
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 107,
    "id": "7d986762",
    "metadata": {},
    "outputs": [
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "49a162bf",
    "metadata": {},
    "outputs": [
@@ -756,9 +756,13 @@
     }
    ],
    "source": [
+    "\n",
     "#aixo fa el mateix que la funcio CreateCopies, pero sense funcio, treure\n",
+    "num_networks = 2\n",
     "A_test_0 = np.zeros((num_networks, Nx, Nx))\n",
     "np.random.seed(1)\n",
+    "p=p_paper\n",
+    "q=q_paper\n",
     "\n",
     "for k in range(num_networks):\n",
     "    A_copy_0 = np.zeros_like(L)   # matriu tota de 0\n",
@@ -787,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 113,
    "id": "3b0c980c",
    "metadata": {},
    "outputs": [
@@ -799,14 +803,14 @@
       "Blueprint zeros: 47990\n",
       "\n",
       "Xarxa 0:\n",
-      "  Edges: 2207\n",
-      "  Errors esborrant: 320\n",
-      "  Errors creant: 341\n",
+      "  Edges: 2201\n",
+      "  Errors esborrant: 318\n",
+      "  Errors creant: 333\n",
       "\n",
       "Xarxa 1:\n",
-      "  Edges: 2174\n",
-      "  Errors esborrant: 333\n",
-      "  Errors creant: 321\n"
+      "  Edges: 2239\n",
+      "  Errors esborrant: 299\n",
+      "  Errors creant: 352\n"
      ]
     }
    ],
@@ -857,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 114,
    "id": "a3e81b1f",
    "metadata": {},
    "outputs": [],
@@ -880,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "b6cfd7ee",
    "metadata": {},
    "outputs": [],
@@ -915,19 +919,19 @@
     "    for k in range(0,K):\n",
     "        for f in range(0,Ny): \n",
     "            for c in range(0,Nx):\n",
-    "                p_f=int(P_inv_f[k,f])\n",
+    "                p_f=int(P_inv_f[k,f]) #es tradueix l'index del bliueprint al real de \n",
+    "                 #(per exemple, si el node 1 de L es el node 5 de A, p_f=5)\n",
     "                p_c=int(P_inv_f[k,c])  \n",
+    "                valor_L, valor_A = L_f[f,c], A_f[k,p_f,p_c] #compara el valor de L i A a la posició corresponent\n",
     "                \n",
-    "                valor_L, valor_A = L_f[f,c], A_f[k,p_f,p_c]\n",
-    "                \n",
-    "                ovlp_0[k] = ovlp_0[k] + (1-valor_L)*(1-valor_A )\n",
-    "                ovlp_1[k] = ovlp_1[k] + valor_L*valor_A\n",
+    "                ovlp_0[k] = ovlp_0[k] + (1-valor_L)*(1-valor_A )#mira si els zeros coincideixen a L i a A\n",
+    "                ovlp_1[k] = ovlp_1[k] + valor_L*valor_A #mira si els 1s coincideixen a 0 i a  A\n",
     "                \n",
     "                \n",
     "    ovlp_1 = int(sum(ovlp_1))\n",
-    "    ovlp_0 = int(sum(ovlp_0))\n",
+    "    ovlp_0 = int(sum(ovlp_0)) #se sumen coincidencies en totes les observacions, resultat global\n",
     "    return ovlp_0, ovlp_1\n",
-    "\n",
+    "#retorna ovlp_0 (nre total de no-enllaços ben predits) i ovlp_1 (nre total d'enllacos ben predits)\n",
     "\n",
     "@jit(nopython=True) # The blueprint is the average of the observations (taking into account the mapping)  \n",
     "def L_wiring(A_f, P_inv_f):\n",
@@ -1091,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 116,
    "id": "7adc8e1e",
    "metadata": {},
    "outputs": [
@@ -1101,20 +1105,17 @@
      "text": [
       "Xarxes generades amb p i q del paper:\n",
       "(2, 224, 224)\n",
-      "Aplico L_wiring\n"
-     ]
-    },
-    {
-     "ename": "TypingError",
-     "evalue": "Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1mnon-precise type array(pyobject, 1d, C)\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of argument at C:\\Users\\UX433\\AppData\\Local\\Temp\\ipykernel_13712\\4209206492.py (45)\u001b[0m\n\u001b[1m\nFile \"..\\..\\..\\AppData\\Local\\Temp\\ipykernel_13712\\4209206492.py\", line 45:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n\n\u001b[0m\u001b[1mDuring: Pass nopython_type_inference\u001b[0m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypingError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[40]\u001b[39m\u001b[32m, line 23\u001b[39m\n\u001b[32m     12\u001b[39m \u001b[38;5;66;03m#np.tile(np.arange(Nx), (K,1)).astype(int)   #fem k vectors identitat, perquè les funcions defineixen les permutacions com vectors de mmida NX, no matrius\u001b[39;00m\n\u001b[32m     13\u001b[39m \u001b[38;5;66;03m#print(P_inv_id)\u001b[39;00m\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m#print(\"Primeres 6 posicions de la primera fila del vector identitat, han de sortir en ordre\", P_inv_id[0,:6])\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     20\u001b[39m \n\u001b[32m     21\u001b[39m \u001b[38;5;66;03m#Cridar L_wiring \u001b[39;00m\n\u001b[32m     22\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mAplico L_wiring\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m23\u001b[39m L_nova = \u001b[43mL_wiring\u001b[49m\u001b[43m(\u001b[49m\u001b[43mAo_enters\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mP_inv_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     24\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mL_nova num 1s :\u001b[39m\u001b[33m\"\u001b[39m, np.sum(np.sum(L_nova)),np.sum(np.sum(L)))\n\u001b[32m     28\u001b[39m \u001b[38;5;66;03m#Cridar overlap_total_prob amb la blueprint original (L) i Ao_stack amb identitat\u001b[39;00m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\UX433\\miniconda3\\envs\\myenv\\Lib\\site-packages\\numba\\core\\dispatcher.py:424\u001b[39m, in \u001b[36m_DispatcherBase._compile_for_args\u001b[39m\u001b[34m(self, *args, **kws)\u001b[39m\n\u001b[32m    420\u001b[39m         msg = (\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mstr\u001b[39m(e).rstrip()\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m \u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33mThis error may have been caused \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    421\u001b[39m                \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mby the following argument(s):\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;132;01m{\u001b[39;00margs_str\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m    422\u001b[39m         e.patch_message(msg)\n\u001b[32m--> \u001b[39m\u001b[32m424\u001b[39m     \u001b[43merror_rewrite\u001b[49m\u001b[43m(\u001b[49m\u001b[43me\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mtyping\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m    425\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m errors.UnsupportedError \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[32m    426\u001b[39m     \u001b[38;5;66;03m# Something unsupported is present in the user code, add help info\u001b[39;00m\n\u001b[32m    427\u001b[39m     error_rewrite(e, \u001b[33m'\u001b[39m\u001b[33munsupported_error\u001b[39m\u001b[33m'\u001b[39m)\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\UX433\\miniconda3\\envs\\myenv\\Lib\\site-packages\\numba\\core\\dispatcher.py:365\u001b[39m, in \u001b[36m_DispatcherBase._compile_for_args.<locals>.error_rewrite\u001b[39m\u001b[34m(e, issue_type)\u001b[39m\n\u001b[32m    363\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m e\n\u001b[32m    364\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[32m--> \u001b[39m\u001b[32m365\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m e.with_traceback(\u001b[38;5;28;01mNone\u001b[39;00m)\n",
-      "\u001b[31mTypingError\u001b[39m: Failed in nopython mode pipeline (step: nopython frontend)\n\u001b[1m\u001b[1m\u001b[1mnon-precise type array(pyobject, 1d, C)\u001b[0m\n\u001b[0m\u001b[1mDuring: typing of argument at C:\\Users\\UX433\\AppData\\Local\\Temp\\ipykernel_13712\\4209206492.py (45)\u001b[0m\n\u001b[1m\nFile \"..\\..\\..\\AppData\\Local\\Temp\\ipykernel_13712\\4209206492.py\", line 45:\u001b[0m\n\u001b[1m<source missing, REPL/exec in use?>\u001b[0m\n\n\u001b[0m\u001b[1mDuring: Pass nopython_type_inference\u001b[0m"
+      "Aplico L_wiring\n",
+      "L_nova num 1s : 2186.0 2186.0\n",
+      "Aplico overlap_total_prob\n",
+      "ovlp0_identity = 95980\n",
+      "ovlp1_identity = 4372\n",
+      "Edges_L  = 4372\n",
+      "Edges_NoL = 95980\n",
+      "alpha = 1.0  beta = 1.0\n",
+      "Aplico hamiltonian_prob\n",
+      "H_identity = 19.855110085569322\n",
+      "PAS 1 complet correctament.\n"
      ]
     }
    ],
@@ -1129,15 +1130,8 @@
     "\n",
     "# Construir Ao a enters i identitat (P_inv_id)\n",
     "Ao_enters = A_test.astype(int)       # aqui convertim a int per si de cas havia quedat amb floats després de fer rand\n",
-    "P_inv_id = np.array([random.shuffle(np.arange(Nx)) for _ in range(num_networks)])\n",
-    "#np.tile(np.arange(Nx), (K,1)).astype(int)   #fem k vectors identitat, perquè les funcions defineixen les permutacions com vectors de mmida NX, no matrius\n",
-    "#print(P_inv_id)\n",
-    "#print(\"Primeres 6 posicions de la primera fila del vector identitat, han de sortir en ordre\", P_inv_id[0,:6])\n",
+    "P_inv_id = np.tile(np.arange(Nx), (num_networks, 1))\n",
     "\n",
-    "#ara tinc:\n",
-    "#L → la blueprint (matriu binaria 224x224)\n",
-    "#A_test → les dues xarxes q he generat abans amb p i q(forma 2×224×224)\n",
-    "#P_inv_id → perm identitat (0,1,2,…,223), feta dos cops (per les dues xarxes)'''\n",
     "\n",
     "#Cridar L_wiring \n",
     "print(\"Aplico L_wiring\")\n",
